--- a/chronology.html
+++ b/chronology.html
@@ -258,6 +258,8 @@
 <H4>Patents:</H4>
 
 <ul>
+  
+<li> <span style='font-size:11.0pt'>Hummel P, Nadav U.&nbsp;“<a href="http://www.freepatentsonline.com/10747821.pdf">Optimized digital component analysis system</a>”. US Patent 10747821 (2020)</span>.  
 
 <li> <span style='font-size:11.0pt'>Zhong Q, Mehta A, Hummel P, Bhawalkar KU, Sun S, Aggarwal G.&nbsp;“<a href="http://www.freepatentsonline.com/10397056.pdf">Optimized digitial component analysis system</a>”. US Patent 10397056 (2019)</span>.
 
@@ -283,7 +285,7 @@
 <br>
 <br>
 
-<i>Last updated September 2019.</i>
+<i>Last updated March 2022.</i>
 
 </div>
 
