Update last link

--- a/chronology.html
+++ b/chronology.html
@@ -280,7 +280,7 @@
 <br>
 <br>
 
-<b><a href="http://www.nsf.gov/od/nms/recip_details.cfm?recip_id=171">NSF announcement</a></b> of Ralph Hirschmann (my grandfather) being awarded the National Medal of Science.
+<b><a href="https://nationalmedals.org/laureate/ralph-f-hirschmann/?msclkid=6d4cfa07a72411ec92dae988c341dcbc">NSTMF profile</a></b> of Ralph Hirschmann (my grandfather) being awarded the National Medal of Science.
 
 <br>
 <br>
