--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 <H4>Computer Science</H4>
 
 <ul>
+  
+<li> <span style='font-size:11.0pt'>Hummel P, Schwarz M.&nbsp;“<a href="https://dl.acm.org/doi/pdf/10.1145/3490486.3538281">Efficient capacity provisioning for firms with multiple locations: the case of the public cloud</a>”. <i>Proceedings of the 23<sup>rd</sup> ACM Conference on Electronic Commerce</i> (EC) (2022) 1018-1039</span>.
 
 <li> <span style='font-size:11.0pt'>Hummel P, Nadav U.&nbsp;“<a href="https://dl.acm.org/citation.cfm?id=3327968">Bid-limited targeting</a>”. <i>ACM Transactions on Economics and Computation</i> 7, 2 (2019) Article 5</span>.
 
@@ -213,7 +215,7 @@
 <br>
 <br>
 
-<i>Last updated March 2022.</i>
+<i>Last updated July 2022.</i>
 
 </div>
 
