Update publication list

--- a/chronology.html
+++ b/chronology.html
@@ -31,6 +31,14 @@
 <b>Publications:</b>
 <br> (Sorted chronologically---click <a href="index.html">here</a> for sorting by field.)
 
+<H4>2022</H4>
+
+<ul>
+
+<li> <span style='font-size:11.0pt'>Hummel P, Schwarz M.&nbsp;“<a href="https://dl.acm.org/doi/pdf/10.1145/3490486.3538281">Efficient capacity provisioning for firms with multiple locations: the case of the public cloud</a>”. <i>Proceedings of the 23<sup>rd</sup> ACM Conference on Electronic Commerce</i> (EC) (2022) 1018-1039</span>.
+
+</ul>
+  
 <H4>2019</H4>
 
 <ul>
@@ -285,7 +293,7 @@
 <br>
 <br>
 
-<i>Last updated March 2022.</i>
+<i>Last updated July 2022.</i>
 
 </div>
 
