--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <ul>
   
-<li> <span style='font-size:11.0pt'>Hummel P, Schwarz M.&nbsp;“<a href="https://dl.acm.org/doi/pdf/10.1145/3490486.3538281">Efficient capacity provisioning for firms with multiple locations: the case of the public cloud</a>”. <i>Proceedings of the 23<sup>rd</sup> ACM Conference on Electronic Commerce</i> (EC) (2022) 1018-1039</span>.
+<li> <span style='font-size:11.0pt'>Hummel P, Schwarz M.&nbsp;“<a href="https://dl.acm.org/doi/pdf/10.1145/3490486.3538281">Efficient capacity provisioning for firms with multiple locations: the case of the public cloud</a>”. <i>Proceedings of the 23<sup>rd</sup> ACM Conference on Economics and Computation</i> (EC) (2022) 1018-1039</span>.
 
 <li> <span style='font-size:11.0pt'>Hummel P, Nadav U.&nbsp;“<a href="https://dl.acm.org/citation.cfm?id=3327968">Bid-limited targeting</a>”. <i>ACM Transactions on Economics and Computation</i> 7, 2 (2019) Article 5</span>.
 
@@ -68,6 +68,8 @@
 <H4>Economics</H4>
 
 <ul>
+  
+<li> <span style='font-size:11.0pt'>Hummel P, Morgan J, Stocken PC.&nbsp;“Voluntary disclosure of verifiable information with general preferences and information endowment uncertainty”. <i>RAND Journal of Economics</i> (forthcoming)</span>.
 
 <li> <span style='font-size:11.0pt'>Hummel P, McAfee RP.&nbsp;“<a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/iere.12318">Evolutionary consumers imply monopolies exit</a>”. <i>International Economic Review</i> 59, 4 (2018) 1733-1746</span>.
 
@@ -215,7 +217,7 @@
 <br>
 <br>
 
-<i>Last updated July 2022.</i>
+<i>Last updated February 2023.</i>
 
 </div>
 
