--- a/chronology.html
+++ b/chronology.html
@@ -31,11 +31,19 @@
 <b>Publications:</b>
 <br> (Sorted chronologically---click <a href="index.html">here</a> for sorting by field.)
 
+<H4>2023</H4>
+
+<ul>
+
+<li> <span style='font-size:11.0pt'>Hummel P, Morgan J, Stocken PC.&nbsp;“Voluntary disclosure of verifiable information with general preferences and information endowment uncertainty”. <i>RAND Journal of Economics</i> (forthcoming)</span>.
+
+</ul>
+
 <H4>2022</H4>
 
 <ul>
 
-<li> <span style='font-size:11.0pt'>Hummel P, Schwarz M.&nbsp;“<a href="https://dl.acm.org/doi/pdf/10.1145/3490486.3538281">Efficient capacity provisioning for firms with multiple locations: the case of the public cloud</a>”. <i>Proceedings of the 23<sup>rd</sup> ACM Conference on Electronic Commerce</i> (EC) (2022) 1018-1039</span>.
+<li> <span style='font-size:11.0pt'>Hummel P, Schwarz M.&nbsp;“<a href="https://dl.acm.org/doi/pdf/10.1145/3490486.3538281">Efficient capacity provisioning for firms with multiple locations: the case of the public cloud</a>”. <i>Proceedings of the 23<sup>rd</sup> ACM Conference on Economics and Computation</i> (EC) (2022) 1018-1039</span>.
 
 </ul>
   
@@ -293,7 +301,7 @@
 <br>
 <br>
 
-<i>Last updated July 2022.</i>
+<i>Last updated February 2023.</i>
 
 </div>
 
