--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <ul>
   
-<li> <span style='font-size:11.0pt'>Hummel P, Morgan J, Stocken PC.&nbsp;“Voluntary disclosure of verifiable information with general preferences and information endowment uncertainty”. <i>RAND Journal of Economics</i> (forthcoming)</span>.
+<li> <span style='font-size:11.0pt'>Hummel P, Morgan J, Stocken PC.&nbsp;“<a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/1756-2171.12483">Voluntary disclosure of verifiable information with general preferences and information endowment uncertainty</a>”. <i>RAND Journal of Economics</i> 55, 4 (2024) 519-549</span>.
 
 <li> <span style='font-size:11.0pt'>Hummel P, McAfee RP.&nbsp;“<a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/iere.12318">Evolutionary consumers imply monopolies exit</a>”. <i>International Economic Review</i> 59, 4 (2018) 1733-1746</span>.
 
@@ -217,7 +217,7 @@
 <br>
 <br>
 
-<i>Last updated February 2023.</i>
+<i>Last updated June 2025.</i>
 
 </div>
 
