--- a/chronology.html
+++ b/chronology.html
@@ -31,11 +31,11 @@
 <b>Publications:</b>
 <br> (Sorted chronologically---click <a href="index.html">here</a> for sorting by field.)
 
-<H4>2023</H4>
+<H4>2024</H4>
 
 <ul>
 
-<li> <span style='font-size:11.0pt'>Hummel P, Morgan J, Stocken PC.&nbsp;“Voluntary disclosure of verifiable information with general preferences and information endowment uncertainty”. <i>RAND Journal of Economics</i> (forthcoming)</span>.
+<li> <span style='font-size:11.0pt'>Hummel P, Morgan J, Stocken PC.&nbsp;“<a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/1756-2171.12483">Voluntary disclosure of verifiable information with general preferences and information endowment uncertainty</a>”. <i>RAND Journal of Economics</i> 55, 4 (2024) 519-549</span>.
 
 </ul>
 
@@ -301,7 +301,7 @@
 <br>
 <br>
 
-<i>Last updated February 2023.</i>
+<i>Last updated July 2025.</i>
 
 </div>
 
